<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image</string>
    <string name="action_settings">Settings</string>
    <string name="text_view_empty"></string>
    <string name="text_view_red">Red</string>
    <string name="text_view_green">Green</string>
    <string name="text_view_blue">Blue</string>
    <string name="text_view_depth">Depth</string>
    <string name="image_view_content_description">The Beautiful Portuguese Girl</string>
    <string name="button_invert">Инвертируем изображение</string>
    <string name="button_open_activity_invert_image">Пример инвертирования изображения</string>
    <string name="button_grayscale">Применить градации серого</string>
    <string name="button_open_activity_grayscale_image">Пример градации серого изображения</string>
    <string name="button_rotate">Повернем изображение на 90 градусов</string>
    <string name="button_open_activity_rotate_image">Пример вращения изображения</string>
    <string name="button_channel_mixer">Изменим интенсивности цвета изображдения</string>
    <string name="button_open_activity_channel_mixer_image">Пример регулирования интенсивности цвета изображдения</string>
    <string name="button_reset">Сбросить</string>
    <string name="button_open_activity_filter_image">Пример использования цветовых фильтров</string>
    <string name="button_open_activity_gamma_image">Пример использования гамма-коррекции</string>
    <string name="button_open_activity_sepia_image">Пример использования имитация старых фотографий</string>
    <string name="button_water_mark">Обновить</string>
    <string name="button_open_activity_water_mark_image">Пример наносения водяного знака на изображение</string>
    <string name="text_view_water_mark">Watermark</string>
    <string name="edit_text_default_text">The Beautiful Portuguese Girl</string>
    <string name="button_open_activity_color_depth_image">Пример изменения глубины цвета изображения</string>
    <string name="radio_button_offset_0">Offset: 0</string>
    <string name="radio_button_offset_32">Offset: 32</string>
    <string name="radio_button_offset_64">Offset: 64</string>
    <string name="radio_button_offset_128">Offset: 128</string>
    <string name="button_open_activity_contrast_image">Пример изменения контрастности изображения</string>
    <string name="text_view_contrast">Contrast</string>
    <string name="button_open_activity_brightness_image">Пример изменения яркости изображения</string>
    <string name="text_view_brightness">Brightness</string>
    <string name="button_snow_effect">Применить</string>
    <string name="button_open_activity_snow_effect_image">Пример создания эффекта снега</string>
    <string name="button_black_filter">Применить</string>
    <string name="button_open_activity_black_filter_image">Пример создания эффекта чернильного порошока</string>
    <string name="button_noise_effect">Применить</string>
    <string name="button_open_activity_noise_effect_image">Пример создания эффекта шума</string>
    <string name="button_open_activity_saturation_image">Пример использования насыщенности</string>
    <string name="text_view_saturation">Saturation</string>
    <string name="button_open_activity_hue_image">Пример изменения оттенка изображения</string>
    <string name="text_view_hue">Hue</string>
    <string name="button_open_activity_shading_filter_image">Пример использования затенения изображения</string>
    <string name="radio_button_none">None</string>
    <string name="radio_button_red">Red</string>
    <string name="radio_button_green">Green</string>
    <string name="radio_button_blue">Blue</string>
    <string name="radio_button_magenta">Magenta</string>
    <string name="radio_button_violet">Violet</string>
    <string name="button_highlight">Применить</string>
    <string name="button_open_activity_highlight_image">Пример использования подстветки</string>
    <string name="button_emboss_effect">Применить</string>
    <string name="button_open_activity_emboss_effect_image">Пример использования эффекта рельеф</string>
    <string name="button_gaussian_blur_effect">Применить</string>
    <string name="button_open_activity_gaussian_blur_effect_image">Пример использования размытие по Гауссу</string>
    <string name="button_engraving_effect">Применить</string>
    <string name="button_open_activity_engraving_effect_image">Пример использования гравировки</string>
    <string name="button_sharpen_effect">Применить</string>
    <string name="button_open_activity_sharpen_effect_image">Пример изменениея резкости</string>
    <string name="text_view_sharpen_effect">Weight</string>
    <string name="button_mean_removal_effect">Применить</string>
    <string name="button_open_activity_mean_removal_effect_image">Пример использования изменениея резкости</string>
    <string name="button_smooth_effect">Применить</string>
    <string name="button_open_activity_smooth_effect_image">Пример использования сглаживания</string>
    <string name="text_view_smooth_effect">Smooth</string>

</resources>