<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FrameLayoutFragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonOpenActivityInvertImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_invert_image" />

            <Button
                android:id="@+id/buttonOpenActivityGrayscaleImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_grayscale_image" />

            <Button
                android:id="@+id/buttonOpenActivityRotateImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_rotate_image" />

            <Button
                android:id="@+id/buttonOpenActivityChannelMixerImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_channel_mixer_image" />

            <Button
                android:id="@+id/buttonOpenActivityFilterImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_filter_image" />

            <Button
                android:id="@+id/buttonOpenActivityGammaImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_gamma_image" />

            <Button
                android:id="@+id/buttonOpenActivitySepiaImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_sepia_image" />

            <Button
                android:id="@+id/buttonOpenActivityWaterMarkImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_water_mark_image" />

            <Button
                android:id="@+id/buttonOpenActivityColorDepthImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_color_depth_image" />

            <Button
                android:id="@+id/buttonOpenActivityContrastImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_contrast_image" />

            <Button
                android:id="@+id/buttonOpenActivityBrightnessImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_brightness_image" />

            <Button
                android:id="@+id/buttonOpenActivitySnowEffectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_snow_effect_image" />

            <Button
                android:id="@+id/buttonOpenActivityBlackFilterImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_black_filter_image" />

            <Button
                android:id="@+id/buttonOpenActivityNoiseEffectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_noise_effect_image" />

            <Button
                android:id="@+id/buttonOpenActivitySaturationImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_saturation_image" />

            <Button
                android:id="@+id/buttonOpenActivityHueImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_hue_image" />

            <Button
                android:id="@+id/buttonOpenActivityShadingFilterImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_shading_filter_image" />

            <Button
                android:id="@+id/buttonOpenActivityHighlightImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_highlight_image" />

            <Button
                android:id="@+id/buttonOpenActivityEmbossEffectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_emboss_effect_image" />

            <Button
                android:id="@+id/buttonOpenActivityGaussianBlurEffectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_gaussian_blur_effect_image" />

            <Button
                android:id="@+id/buttonOpenActivityEngravingEffectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_engraving_effect_image" />

            <Button
                android:id="@+id/buttonOpenActivitySharpenEffectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_sharpen_effect_image" />

            <Button
                android:id="@+id/buttonOpenActivityMeanRemovalEffectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_mean_removal_effect_image" />

            <Button
                android:id="@+id/buttonOpenActivitySmoothEffectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/button_open_activity_smooth_effect_image" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>