<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityShadingFilterImage" >

    <RadioGroup
        android:id="@+id/radioGroupShadingFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <RadioButton
            android:id="@+id/radioButtonShadingNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_button_none" />

        <RadioButton
            android:id="@+id/radioButtonShadingRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_red" />

        <RadioButton
            android:id="@+id/radioButtonShadingGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_green" />

        <RadioButton
            android:id="@+id/radioButtonShadingBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_blue" />

        <RadioButton
            android:id="@+id/radioButtonShadingMagenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_magenta" />

        <RadioButton
            android:id="@+id/radioButtonShadingViolet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_violet" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/image_view_content_description"
        android:src="@drawable/beautiful_portuguese_girl" />

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

</LinearLayout>